# flash-molecular-dynamics

./: .gitignore  CLAUDE.md  README.md  conftest.py  pyproject.toml
examples/: langevin.yaml
gif_outputs/: gif_langevin.yaml
scripts/: render_readme_gif.py
src/flashmd/: hub.py  utils.py
src/flashmd/data/: atomic_data.py
src/flashmd/geometry/: __init__.py  internal_coordinates.py
src/flashmd/kernels/: __init__.py  cfconv_kernels.py  csr_kernels.py
src/flashmd/models/: __init__.py  _module_init.py  gptq.py  gradients.py  mlp.py  pyg_forward_compatibility.py  schnet.py  utils.py
src/flashmd/models/radial_basis/: __init__.py
src/flashmd/neighbor_list/: neighbor_list.py  torch_impl.py
src/flashmd/prior/: __init__.py  base.py  fourier_series.py  harmonic.py  polynomial.py  repulsion.py  restricted_bending.py
src/flashmd/scripts/: nve_verlet.py  nvt_langevin.py  nvt_pt_langevin.py
src/flashmd/simulation/: __init__.py  base.py  cli.py  langevin.py  logging.py  parallel_tempering.py  specialize_prior.py  torch_compile_warning.py  velocity_verlet.py
tests/kernels/: __init__.py
tests/models/: test_cutoff.py  test_nn_utils.py  test_schnet.py
tests/models/radial_basis/: test_radial_basis.py
